add readme, edit gitignore a bit

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
-[Bb]uild/
-[Bb]uilds/
 [Ll]ogs/
 [Uu]serSettings
 
-[Aa]ssets/Plugins/
-[Aa]ssets/Plugins.meta
-
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
+[Aa]ssets/Plugins*
 
 # Visual Studio cache directory
 .vs/
