--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 [Tt]emp/
 [Oo]bj/
 [Ll]ogs/
-[Uu]serSettings
+[Uu]serSettings/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
